--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body class="bg-slate-800 h-full">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>Enable javascript please</noscript>
   </body>
 </html>
